--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link  rel ="stylesheet" href ="styles/style.css" >
-    <link  rel ="stylesheet" href ="styles/global.css">
+
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/global.css" />
 
     <title>Countdown</title>
-</head>
-<body>
-    <div class="countdown-time">
-        <div class="countdown-time-item">
-          <p class="countdown-time-item-text">Dias</p>
-          <p class="countdown-time-item-number" id="dias">00</p>
-        </div>
-        <div class="countdown-time-item">
+  </head>
+  <body>
+    <div class="container">
+      <div class="countdown">
+        <header>
+          <h1>Ready to launch in...</h1>
+        </header>
+
+        <div class="countdown-time">
+          <div class="countdown-time-item">
+            <p class="countdown-time-item-text">Dias</p>
+            <p class="countdown-time-item-number" id="dias">00</p>
+          </div>
+          <div class="countdown-time-item">
             <p class="countdown-time-item-text">Horas</p>
             <p class="countdown-time-item-number" id="horas">00</p>
           </div>
@@ -35,12 +44,21 @@
             <p class="countdown-time-item-number" id="segundos">00</p>
           </div>
         </div>
- <footer>
-            <span> </span>
-            <button> </button>
-          </footer>
-        </div>
 
-   
-</body>
+        <footer>
+          <span>Inscreva-se para saber mais sobre o lançamento</span>
+          <button>Inscreva-se</button>
+        </footer>
+      </div>
+
+      <div class="hero-image">
+        <img src="assets/imagens/rocket.svg" />
+      </div>
+    </div>
+
+    <img src="assets/imagens/top-image.svg" class="top-image" />
+    <img src="assets/imagens/bottom-image.svg" class="bottom-image" />
+
+    <script src="script.js"></script>
+  </body>
 </html>
